# 3d-models

./: .envrc  .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
models/build123d/: README.md  pyproject.toml
models/build123d/card-tray/: card-tray.py
models/build123d/card-tray-lid/: card-tray-lid.py
models/build123d/card-tray-lid/output/: card-tray-lid.stl
models/build123d/card-tray/output/: card-tray.stl
models/build123d/desk-riser/: desk-riser.py
models/build123d/desk-riser/output/: desk-riser-fit-test.stl  desk-riser-tolerance-gauge.stl  desk-riser.stl
models/build123d/drawer-tray/: drawer-tray.py
models/build123d/drawer-tray/output/: drawer-tray-halves.stl  drawer-tray-none.stl  drawer-tray-quarters.stl
models/build123d/mini-rack/: mini-rack.py
models/build123d/mini-rack/output/: assembly-preview.stl  post.stl  shelf.stl
models/build123d/pen-tray/: pen-tray.py
models/build123d/pen-tray-open/: pen-tray-open.py
models/build123d/pen-tray-open/output/: pen-tray-open.stl
models/build123d/pen-tray/output/: pen-tray.stl
models/build123d/poop-bucket-no-holes/: poop-bucket-no-holes.py
models/build123d/sample-plate/: sample-plate.py
models/build123d/sample-plate/output/: sample-plate.stl
models/cadquery/: README.md  pyproject.toml
models/cadquery/macbook-stand-v2/: macbook-stand-v2.scad
models/cadquery/macbook-stand/output/: macbook-stand-back.stl  macbook-stand-bridge.stl
models/cadquery/sample-box/output/: sample-box.stl
models/jscad/: jscad-now.js  package-lock.json  package.json
models/macbook-stand/: macbook-stand.py
(+13 files in other folders)
