[project]
name = "3d-models-build123d"
version = "0.1.0"
description = "build123d parametric models for FDM printing (Bambu Lab A1 Mini)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "build123d>=0.9.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "ocp-vscode>=3.3.4",
    "ruff>=0.15.10",
]
